[package]
name = "ws-vesting"
version = "0.1.0"
description = "Solana Vesting Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ws_vesting"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "0.30.0", features = ["init-if-needed"]}
anchor-spl = "0.30.0"
solana-program = "1.18.17"


